[package]
name = "low-level-chat-solution"
version = "0.1.0"
authors = ["Esteban Borai <estebanborai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# in order to use the EventLoop struct im using v0.5
# https://github.com/tokio-rs/mio/issues/475
mio = "0.5"